--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-24 22:33:19
+lastsearch = 2024-07-25 00:49:52
 
 [chanrathanhthuy.com]
-match = 9.7%%
-title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
+match = -6.5%%
+title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
+url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
 match = -16.1%%
 title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
-url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
+url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html?srsltid=AfmBOorwxKP-YKV3sZiIXC5wIFEe830r1nHa5KlBRYj0vXdjegMcQ4y0
 
 [songhongonline.vn]
 match = 50.0%%
@@ -54,7 +54,7 @@ url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 [everonvn.com.vn]
 match = -41.9%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOopl7mPoc6oenWiueNza5uf59qP68vTtIvaCGcRqWSXkkn4UilRD
 
 [lizd.vn]
 match = 0.0%%
