--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-24 22:15:24
+lastsearch = 2024-07-25 00:46:47
 
 [shopee.vn]
 match = -94.7%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -157.9%%
-title = Chúc Mừng Sinh Nhật - Happy Birthday, Nhạc Thiếu Nhi Chúc ...
-url = https://www.youtube.com/watch?v=GLi1fzFx4ho
+match = -142.1%%
+title = Liên Khúc Nhạc Thiếu Nhi Cho Bé Nghe Vui Chơi Cả Ngày ...
+url = https://www.youtube.com/watch?v=WA7DhpmkOHs
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -59,7 +59,7 @@ url = https://chieutrucsaigon.com/chieu-truc-tam/
 [www.lazada.vn]
 match = -84.2%%
 title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
-url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
+url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html?srsltid=AfmBOorrZfKVhV_0eT40FXkf13zjMmwS5Dre8Ew36wv26_ntMGV-hHfg
 
 [tiki.vn]
 match = -110.5%%
