--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-24 20:00:34
+lastsearch = 2024-07-25 00:48:13
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -109,12 +109,12 @@ url = https://www.newhomesource.com/learn/8-surfire-ways-to-annoy-your-hoa/
 [www.leg.state.fl.us]
 match = -170.6%%
 title = The 2023 Florida Statutes (including Special Session C)
-url = http://www.leg.state.fl.us/Statutes/index.cfm?App_mode=Display_Statute&URL=0400-0499/0489/Sections/0489.103.html
+url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/0720.html
 
 [www.flsenate.gov]
-match = -129.4%%
-title = Chapter 720 Section 303 - 2018 Florida Statutes
-url = https://www.flsenate.gov/Laws/Statutes/2018/0720.303
+match = -147.1%%
+title = CS/CS/HB 919 Homeowners' Associations SPONSOR(S)
+url = https://www.flsenate.gov/Session/Bill/2023/919/Analyses/h0919b.COM.PDF
 
 [www.navy.mil]
 match = -23.5%%
@@ -207,9 +207,9 @@ title = Montana Department of Revenue: Home
 url = https://mtrevenue.gov/
 
 [docs.legis.wisconsin.gov]
-match = -117.6%%
-title = Wisconsin Legislature: 2021 Wisconsin Act 199
-url = https://docs.legis.wisconsin.gov/2021/related/acts/199
+match = -76.5%%
+title = Wisconsin Legislature: 710.18(1)(c)1.b.
+url = https://docs.legis.wisconsin.gov/document/statutes/710.18(1)(c)1.b.
 
 [www.flrules.org]
 match = -7.7%%
@@ -379,7 +379,7 @@ url = https://www.clickorlando.com/news/local/
 [www.tallahassee.com]
 match = 0.0%%
 title = 
-url = https://www.tallahassee.com/story/news/politics/2024/06/26/new-florida-laws-july-hoa-bears-book-bans-wine/73995257007/
+url = https://www.tallahassee.com/story/news/local/state/2024/07/01/florida-hoa-new-law-july/74265853007/
 
 [bluearrowpm.com]
 match = 0.0%%
