--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-07-24 23:16:25
+lastsearch = 2024-07-25 00:47:19
 
 [www.diepxuan.com]
 match = 26.3%%
@@ -23,8 +23,8 @@ url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
 
 [tuananh.vn]
 match = 10.0%%
-title = LÒ XO TÚI RUBY MERRY
-url = https://tuananh.vn/lo-xo-tui-ruby-merry-p445.html
+title = LÒ XO TÚI RUBY MASTERY
+url = https://tuananh.vn/lo-xo-tui-ruby-mastery-p444.html
 
 [dem24h.vn]
 match = -35.0%%
