--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-24 23:18:27
+lastsearch = 2024-07-25 00:52:43
 
 [www.diepxuan.com]
-match = -125.0%%
-title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-140x190x09.html?srsltid=AfmBOor7zh3bqHf_kfVOO0EMK3eRt3lTkdZLir5NBtudLBJVrne1EQWj
+match = -131.2%%
+title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 
 [demxanh.com]
 match = -181.2%%
 title = Bảng giá Đệm bông ép Dreamland khuyến mãi mới nhất ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html?srsltid=AfmBOoqyfHYndrx4NoYqX8RmOh7AyFRyM1NCYRpwZ1UwEp1_UAQvYVwE
+url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html
 
 [m.facebook.com]
 match = 0.0%%
