--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-25 00:49:52
+lastsearch = 2024-07-25 01:55:24
 
 [chanrathanhthuy.com]
-match = -6.5%%
-title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
-url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
+match = -3.2%%
+title = Chọn màu sắc chăn ga gối đệm hợp phong thủy vợ chồng
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-vo-chong-1469.html
 
 [demxanh.com]
-match = -16.1%%
-title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
-url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html?srsltid=AfmBOorwxKP-YKV3sZiIXC5wIFEe830r1nHa5KlBRYj0vXdjegMcQ4y0
+match = 63.3%%
+title = Bộ chăn ga gối lụa 6 món L6M18
+url = https://demxanh.com/bo-chan-ga-goi-lua-6-mon-l6m18.html
 
 [songhongonline.vn]
-match = 50.0%%
-title = Bộ chăn ga gối SH_UC23 035
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc23-035
+match = 4.3%%
+title = Bộ sản phẩm SH_BT22 056
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bt22-056
 
 [changagoidemsonghong.com]
 match = -29.0%%
