--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -7,14 +7,14 @@ lastopen = 2024-06-07 00:25:30
 lastsearch = 2024-07-25 01:38:09
 
 [everon.online]
-match = -32.4%%
-title = 4 – Everon Tân Mai | Tổng Đại Lý Chăn Ga Gối Đệm Everon ...
-url = https://everon.online/blogs/video/4
+match = 50.0%%
+title = Bộ Ga Chun Chần Everon Bốn Mùa ...
+url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon ESM-24016 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esm24016.html
+title = Everon EPM-24060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm24060.html
 
 [nem.vn]
 match = 5.9%%
@@ -64,7 +64,7 @@ url = https://ninhouse.vn/collections/bo-chan-ga-goi-dem-cotton
 [jysk.vn]
 match = -26.5%%
 title = Ga Chun 140 x 200 cm Bọc Nệm Cotton Satin Cao Cấp | JYSK
-url = https://jysk.vn/ga-chun-140x200cm?srsltid=AfmBOor7mczV4ZOMNlen84o9xqnjK8UB7pij29U3wbCXMclgPFTHECcl
+url = https://jysk.vn/ga-chun-140x200cm
 
 [anpha.vuanem.com]
 match = 0.0%%
