--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-24 22:15:00
+lastsearch = 2024-07-25 01:52:58
 
 [tiki.vn]
 match = -47.6%%
@@ -12,14 +12,14 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = -90.5%%
-title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
-url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
+match = -85.7%%
+title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
+url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
-match = -42.9%%
-title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
-url = https://www.roc-taiwan.org/vn_vi/post/62.html
+match = -19.0%%
+title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
+url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.tiktok.com]
 match = -19.0%%
@@ -87,9 +87,9 @@ title = Đài Loan (Trung Quốc) tiếp tục tìm kiếm 18 người mất tí
 url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich-sau-dong-dat-post803249.html
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+match = 19.0%%
+title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [znews.vn]
 match = -104.8%%
