--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-07-24 22:29:20
+lastsearch = 2024-07-25 01:50:17
 
 [demxanh.com]
 match = -135.3%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqER3IWcSAMWThqNaVOFAOiqQfLSVGuPZNOeKii85z2zmFgijkW
 
 [dem24h.vn]
 match = -29.4%%
