--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-24 22:14:46
+lastsearch = 2024-07-25 01:46:03
 
 [www.tiktok.com]
 match = -35.3%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ5ErDx93&sig=ACfU3U3nhCRTmPeQYA__zUg6bQzYeHbzaQ&hl=en&sa=X&ved=2ahUKEwjw--To-7-HAxWjGFkFHfxTA10Q6AF6BAgZEAM
+match = -158.8%%
+title = The Monthly Army List - Page 23 - Google Books Result
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdmnga4jU&sig=ACfU3U3YAin7VlFhSujO8Jj93oJ1OBcVEQ&hl=en&sa=X&ved=2ahUKEwjN1uWFq8CHAxXsEzQIHZCRCw8Q6AF6BAg1EAM
 
 [tax.vermont.gov]
 match = -29.4%%
@@ -530,4 +530,9 @@ url = http://anhp.vn/ky-hop-thu-18-ky-hop-thuong-le-giua-nam-hdnd-thanh-pho-khoa
 match = -111.8%%
 title = Sắc vóc người đẹp đóng phim kinh dị về Tấm Cám
 url = https://vnexpress.net/sac-voc-nguoi-dep-dong-phim-kinh-di-ve-tam-cam-4770681.html
+
+[praktijk-talent.nl]
+match = -5.9%%
+title = Nevada Hoa Fraud - Talent
+url = https://praktijk-talent.nl/tycq/nevada-hoa-fraud
 
