--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-25 00:49:29
+lastsearch = 2024-07-25 01:53:55
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -157.1%%
-title = The Linguist and Educational Review - Page 15 - Google Books Result
-url = https://books.google.com/books?id=V3IoVBZlBtsC&pg=RA13-PA15&lpg=RA13-PA15&dq=nem+di+a+mon+9f+16+re&source=bl&ots=MUAitOSHco&sig=ACfU3U0PfUKT98IvxI-8pYjjyN2FP20ySw&hl=en&sa=X&ved=2ahUKEwjA1IyznsCHAxVeFlkFHQllDlYQ6AF6BAhQEAM
+match = -123.8%%
+title = A Critical Pronouncing Dictionary, and Expositor of the ...
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKBw7Dpqm&sig=ACfU3U0Adhwi1uJMEmuSrWYwk79JGJejTQ&hl=en&sa=X&ved=2ahUKEwi33uzmrMCHAxXGODQIHVkKASIQ6AF6BAgmEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -76.2%%
-title = Nem Dubrovnik 2024 confirms a record of partecipants
-url = https://www.formatbiz.it/dettNews.aspx?id=11256
+match = -100.0%%
+title = Nem Dubrovnik unveils its 10 Keynote Speakers for 10 ...
+url = https://www.formatbiz.it/dettNews.aspx?id=9944
 
 [yro.slashdot.org]
 match = -114.3%%
