--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-24 23:47:27
+lastsearch = 2024-07-25 02:15:45
 
 [everon.online]
 match = 50.0%%
@@ -78,8 +78,8 @@ url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EST-24035 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-est24035.html
+title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
 
 [demxanh.com]
 match = -2.9%%
