--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-24 21:52:44
+lastsearch = 2024-07-25 02:19:25
 
 [www.facebook.com]
 match = -182.4%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -188.2%%
-title = Immunological memory to SARS-CoV-2 assessed for up to ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7805444/
+match = -200.0%%
+title = Seeing the unseen of Chinese herbal medicine processing ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 
 [books.google.com]
 match = -7.7%%
