--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-25 01:48:00
+lastsearch = 2024-07-25 02:12:29
 
 [www.instagram.com]
 match = -123.1%%
@@ -34,7 +34,7 @@ url = https://www.linklaters.com/en-us/sitemap
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Dior
+url = https://en.wikipedia.org/wiki/Catherine_Dior
 
 [press.fourseasons.com]
 match = -269.2%%
@@ -57,8 +57,8 @@ title = Kwok Hoi Chan - 12 vintage design items
 url = https://www.vntg.com/designer/kwok-hoi-chan/
 
 [news.artnet.com]
-match = -338.5%%
-title = Fugitive Billionaire Joseph Lau Will Auction Off Millions of ...
+match = -246.2%%
+title = Fugitive Billionaire Joseph Lau Will Auction Off ...
 url = https://news.artnet.com/market/billionaire-joseph-lau-auctions-2093755
 
 [www.beautypackaging.com]
@@ -152,8 +152,8 @@ title = Get To Know The 15 Biggest Art Collectors In Hong Kong
 url = https://www.tatlerasia.com/lifestyle/arts/hk-get-to-know-the-15-biggest-art-collectors-in-hong-kong
 
 [www.dailymail.co.uk]
-match = -284.6%%
-title = Ex showbiz reporter becomes the richest woman in Hong ...
+match = -230.8%%
+title = Ex showbiz reporter becomes the richest woman ...
 url = https://www.dailymail.co.uk/news/article-4275540/Ex-showbiz-reporter-richest-woman-Hong-Kong.html
 
 [m.facebook.com]
