--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-25 01:50:06
+lastsearch = 2024-07-25 02:15:12
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = -10.7%%
-title = chiếu ngồi 2-3 mâm cỗ - trải phòng khách - Cnhua
-url = https://www.sendo.vn/chieu-nhua-kho-rong-chieu-ngoi-2-3-mam-co-trai-phong-khach-8398796.html
+match = -7.1%%
+title = Chiếu Nhựa Văn Phòng Bền Đẹp, Rẻ Như Tặng, Chất ...
+url = https://www.sendo.vn/chieu-nhua-van-phong.htm
 
 [mia.vn]
 match = -39.3%%
