--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-25 01:48:57
+lastsearch = 2024-07-25 02:12:52
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title =
 url = https://en.wikipedia.org/wiki/Ren_Gill
 
 [books.google.com]
-match = -430.0%%
-title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfqLJuld&sig=ACfU3U2A4DuRoMYeHqO7hfZ2wnNrCxSLqQ&hl=en&sa=X&ved=2ahUKEwjrwOHYq8CHAxXUDjQIHWOcBLQQ6AF6BAgZEAM
+match = -280.0%%
+title = The Letter to Ren An and Sima Qian’s Legacy
+url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fsiRYit09&sig=ACfU3U1N8QrTsatcZsP2UwbxfZgMcOTPJw&hl=en&sa=X&ved=2ahUKEwi79s-EscCHAxVJFlkFHfK3BxQQ6AF6BAgbEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
