--- a/images/nem-caosu-lien-a-160x200x10/config.ini
+++ b/images/nem-caosu-lien-a-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-160x200x10.html
 lastopen = 2024-07-02 14:09:53
 
 [search]
-lastsearch = 2024-07-24 23:41:00
+lastsearch = 2024-07-25 02:13:05
 
 [nemgiakho.com]
 match = 7.4%%
@@ -85,4 +85,9 @@ url = https://nem.vn/nem-cao-su-thien-nhien-lien-a-classic
 match = -37.0%%
 title = Đệm cao su, Nệm Cao Su Non Thiên Nhiên Giảm Giá -45%%
 url = https://khodem.vn/dem-cao-su/
+
+[websosanh.vn]
+match = 59.3%%
+title = Nệm cao su Liên Á Classic 160x200x10cm
+url = https://websosanh.vn/nem-cao-su-lien-a-classic-160x200x10cm/907296504/so-sanh.htm
 
