--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-25 01:21:22
+lastsearch = 2024-07-25 02:11:48
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -14,7 +14,7 @@ url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 [demxanh.com]
 match = -22.7%%
 title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOopVtpunMoy1_yyEEPfV_EU36SClVnhjEiYCuzPUSTCWUCPtJNXB
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -37,13 +37,13 @@ title = Thảm Sofa Biên Hòa
 url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [www.thamvintage.vn]
-match = -25.0%%
-title = Thảm Vintage
-url = https://www.thamvintage.vn/
+match = 12.5%%
+title = Thảm chân giường
+url = https://www.thamvintage.vn/collections/tham-chan-giuong
 
 [cafeland.vn]
-match = -72.7%%
-title = 5 loại thảm trải giường hot nhất hiện nay - Cafeland
+match = -100.0%%
+title = 5 loại thảm trải giường hot nhất hiện nay 2022 - CafeLand.Vn
 url = https://cafeland.vn/xu-huong/5-loai-tham-trai-giuong-hot-nhat-hien-nay-112172.html
 
 [noithatviva.vn]
